add method getLeaderBrokerId to ClusterInstance